--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My Moleculer microservices project",
   "scripts": {
     "dev": "moleculer-runner --repl --hot services",
-    "start": "moleculer-runner",
+    "start": "moleculer-runner --repl --hot services",
     "ci": "jest --watch",
     "test": "jest --coverage",
     "lint": "eslint services"
